Major refactoring: Changed version Fixed SonarLint issues Changed main class location in README.md and build.gradle